--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,9 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+/* Not using all styling below for my current page
+Keeping in case I add some elements back in */
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -82,7 +85,7 @@ input, select, textarea {
 	}
 
 	body {
-		-ms-overflow-style: scrollbar;
+		-ms-overflow-style: sidebar;
 	}
 
 	@media screen and (max-width: 480px) {
@@ -157,7 +160,7 @@ input, select, textarea {
 		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
 		color: #f56a6a;
-		text-decoration: none;
+		text-decoration: none; */
 	}
 
 		a:hover {
@@ -3330,7 +3333,41 @@ input, select, textarea {
 					width: 5em;
 				} */
 
-		}
+				#sidebar {
+					box-shadow: 0 0 5em 0 rgba(0, 0, 0, 0.175);
+					height: 100%;
+					left: 0;
+					position: fixed;
+					top: 0;
+					z-index: 10000;
+				}
+	
+					#sidebar.inactive {
+						box-shadow: none;
+					}
+	
+					#sidebar > .inner {
+						-webkit-overflow-scrolling: touch;
+						height: 100%;
+						left: 0;
+						overflow-x: hidden;
+						overflow-y: auto;
+						position: absolute;
+						top: 0;
+					}
+	
+						#sidebar > .inner:after {
+							content: '';
+							display: block;
+							height: 4em;
+							width: 100%;
+						}
+
+						body.is-preload #sidebar {
+							display: visible;
+						}
+					}
+
 
 /* Header */
 
