--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2071,6 +2071,10 @@ input, select, textarea {
 
 /* Image */
 
+#eliza{
+	height: 450px;
+	width: auto;
+}
 	.image {
 		border-radius: 0.375em;
 		border: 0;
