--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,6 +34,8 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
+	margin-left: 5em;
+	margin-right: 5em;
 }
 #resume{
 	padding-top: 3em;
